...
          borderRadius: BorderRadius.circular(10.0),
        ),
        padding: EdgeInsets.symmetric(vertical: 15.0),
      ),
      child: Center(
        child: Text(
          "Login",
          style: TextStyle(color: Colors.white, fontSize: 16.0),
        ),
      ),
    );
  }

...
